Creating site for 1.0

--- a/dependencies.html
+++ b/dependencies.html
@@ -28,7 +28,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2015-04-13</span>
-                  &nbsp;| <span id="projectVersion">Version: 1.0-SNAPSHOT</span>
+                  &nbsp;| <span id="projectVersion">Version: 1.0</span>
                       </div>
             <div class="xright">                    <a href="./" title="SASS Maven Plugin">SASS Maven Plugin</a>
               
@@ -318,7 +318,7 @@
 <div class="section">
 <h3>Dependency Tree<a name="Dependency_Tree"></a></h3>
 <ul>
-<li>com.learningobjects:sass-maven-plugin:maven-plugin:1.0-SNAPSHOT <img id="_img1" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_dep0', '_img1' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_dep0" style="display:none">
+<li>com.learningobjects:sass-maven-plugin:maven-plugin:1.0 <img id="_img1" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_dep0', '_img1' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_dep0" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>SASS Maven Plugin</th></tr>
