--- a/plugin-info.html
+++ b/plugin-info.html
@@ -28,7 +28,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2015-04-13</span>
-                  &nbsp;| <span id="projectVersion">Version: 1.0-SNAPSHOT</span>
+                  &nbsp;| <span id="projectVersion">Version: 1.0</span>
                       </div>
             <div class="xright">                    <a href="./" title="SASS Maven Plugin">SASS Maven Plugin</a>
               
@@ -125,7 +125,7 @@ Call <code>mvn sass:help -Ddetail=true
         &lt;plugin&gt;
           &lt;groupId&gt;com.learningobjects&lt;/groupId&gt;
           &lt;artifactId&gt;sass-maven-plugin&lt;/artifactId&gt;
-          &lt;version&gt;1.0-SNAPSHOT&lt;/version&gt;
+          &lt;version&gt;1.0&lt;/version&gt;
         &lt;/plugin&gt;
         ...
       &lt;/plugins&gt;
@@ -135,7 +135,7 @@ Call <code>mvn sass:help -Ddetail=true
       &lt;plugin&gt;
         &lt;groupId&gt;com.learningobjects&lt;/groupId&gt;
         &lt;artifactId&gt;sass-maven-plugin&lt;/artifactId&gt;
-        &lt;version&gt;1.0-SNAPSHOT&lt;/version&gt;
+        &lt;version&gt;1.0&lt;/version&gt;
       &lt;/plugin&gt;
       ...
     &lt;/plugins&gt;
