--- a/dependency-convergence.html
+++ b/dependency-convergence.html
@@ -28,7 +28,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2015-04-13</span>
-                  &nbsp;| <span id="projectVersion">Version: 1.0-SNAPSHOT</span>
+                  &nbsp;| <span id="projectVersion">Version: 1.0</span>
                       </div>
             <div class="xright">                    <a href="./" title="SASS Maven Plugin">SASS Maven Plugin</a>
               
@@ -139,11 +139,11 @@
 <tr class="a">
 <td width="25%">3.4.0</td>
 <td>
-<ol style="list-style-type: decimal">com.learningobjects:sass-maven-plugin:maven-plugin:1.0-SNAPSHOT<br />\-&#160;com.cathive.sass:com.cathive.sass:jar:3.1.0.1:compile<br />&#160;&#160;&#160;\-&#160;com.nativelibs4java:jnaerator-runtime:jar:0.11:compile<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;com.nativelibs4java:jna-jnaerator:jar:0.11:compile<br />&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(net.java.dev.jna:jna:jar:3.4.0:compile - omitted for conflict with 4.1.0)<br /><br /></ol></td></tr>
+<ol style="list-style-type: decimal">com.learningobjects:sass-maven-plugin:maven-plugin:1.0<br />\-&#160;com.cathive.sass:com.cathive.sass:jar:3.1.0.1:compile<br />&#160;&#160;&#160;\-&#160;com.nativelibs4java:jnaerator-runtime:jar:0.11:compile<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;com.nativelibs4java:jna-jnaerator:jar:0.11:compile<br />&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(net.java.dev.jna:jna:jar:3.4.0:compile - omitted for conflict with 4.1.0)<br /><br /></ol></td></tr>
 <tr class="b">
 <td width="25%">4.1.0</td>
 <td>
-<ol style="list-style-type: decimal">com.learningobjects:sass-maven-plugin:maven-plugin:1.0-SNAPSHOT<br />\-&#160;com.cathive.sass:com.cathive.sass:jar:3.1.0.1:compile<br />&#160;&#160;&#160;+-&#160;net.java.dev.jna:jna:jar:4.1.0:compile<br />&#160;&#160;&#160;\-&#160;net.java.dev.jna:jna-platform:jar:4.1.0:runtime<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(net.java.dev.jna:jna:jar:4.1.0:runtime - omitted for duplicate)<br /><br /></ol></td></tr></table></td></tr></table></div>
+<ol style="list-style-type: decimal">com.learningobjects:sass-maven-plugin:maven-plugin:1.0<br />\-&#160;com.cathive.sass:com.cathive.sass:jar:3.1.0.1:compile<br />&#160;&#160;&#160;+-&#160;net.java.dev.jna:jna:jar:4.1.0:compile<br />&#160;&#160;&#160;\-&#160;net.java.dev.jna:jna-platform:jar:4.1.0:runtime<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(net.java.dev.jna:jna:jar:4.1.0:runtime - omitted for duplicate)<br /><br /></ol></td></tr></table></td></tr></table></div>
 <div class="section">
 <h4>org.apache.maven:maven-artifact<a name="org.apache.maven:maven-artifact"></a></h4>
 <table border="0" class="bodyTable">
@@ -154,11 +154,11 @@
 <tr class="b">
 <td width="25%">3.0</td>
 <td>
-<ol style="list-style-type: decimal">com.learningobjects:sass-maven-plugin:maven-plugin:1.0-SNAPSHOT<br />\-&#160;org.apache.maven.plugin-tools:maven-plugin-annotations:jar:3.4:provided<br />&#160;&#160;&#160;\-&#160;(org.apache.maven:maven-artifact:jar:3.0:provided - omitted for conflict with 3.3.1)<br /><br /></ol></td></tr>
+<ol style="list-style-type: decimal">com.learningobjects:sass-maven-plugin:maven-plugin:1.0<br />\-&#160;org.apache.maven.plugin-tools:maven-plugin-annotations:jar:3.4:provided<br />&#160;&#160;&#160;\-&#160;(org.apache.maven:maven-artifact:jar:3.0:provided - omitted for conflict with 3.3.1)<br /><br /></ol></td></tr>
 <tr class="a">
 <td width="25%">3.3.1</td>
 <td>
-<ol style="list-style-type: decimal">com.learningobjects:sass-maven-plugin:maven-plugin:1.0-SNAPSHOT<br />\-&#160;org.apache.maven:maven-plugin-api:jar:3.3.1:compile<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-artifact:jar:3.3.1:compile<br /><br /></ol></td></tr></table></td></tr></table></div>
+<ol style="list-style-type: decimal">com.learningobjects:sass-maven-plugin:maven-plugin:1.0<br />\-&#160;org.apache.maven:maven-plugin-api:jar:3.3.1:compile<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-artifact:jar:3.3.1:compile<br /><br /></ol></td></tr></table></td></tr></table></div>
 <div class="section">
 <h4>org.codehaus.plexus:plexus-utils<a name="org.codehaus.plexus:plexus-utils"></a></h4>
 <table border="0" class="bodyTable">
@@ -169,11 +169,11 @@
 <tr class="a">
 <td width="25%">3.0.17</td>
 <td>
-<ol style="list-style-type: decimal">com.learningobjects:sass-maven-plugin:maven-plugin:1.0-SNAPSHOT<br />\-&#160;org.apache.maven:maven-plugin-api:jar:3.3.1:compile<br />&#160;&#160;&#160;\-&#160;org.eclipse.sisu:org.eclipse.sisu.plexus:jar:0.3.0:compile<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.codehaus.plexus:plexus-utils:jar:3.0.17:compile - omitted for conflict with 3.0.20)<br /><br /></ol></td></tr>
+<ol style="list-style-type: decimal">com.learningobjects:sass-maven-plugin:maven-plugin:1.0<br />\-&#160;org.apache.maven:maven-plugin-api:jar:3.3.1:compile<br />&#160;&#160;&#160;\-&#160;org.eclipse.sisu:org.eclipse.sisu.plexus:jar:0.3.0:compile<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.codehaus.plexus:plexus-utils:jar:3.0.17:compile - omitted for conflict with 3.0.20)<br /><br /></ol></td></tr>
 <tr class="b">
 <td width="25%">3.0.20</td>
 <td>
-<ol style="list-style-type: decimal">com.learningobjects:sass-maven-plugin:maven-plugin:1.0-SNAPSHOT<br />\-&#160;org.apache.maven:maven-plugin-api:jar:3.3.1:compile<br />&#160;&#160;&#160;+-&#160;org.apache.maven:maven-model:jar:3.3.1:compile<br />&#160;&#160;&#160;|&#160;&#160;\-&#160;org.codehaus.plexus:plexus-utils:jar:3.0.20:compile<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-artifact:jar:3.3.1:compile<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.codehaus.plexus:plexus-utils:jar:3.0.20:compile - omitted for duplicate)<br /><br /></ol></td></tr></table></td></tr></table></div></div>
+<ol style="list-style-type: decimal">com.learningobjects:sass-maven-plugin:maven-plugin:1.0<br />\-&#160;org.apache.maven:maven-plugin-api:jar:3.3.1:compile<br />&#160;&#160;&#160;+-&#160;org.apache.maven:maven-model:jar:3.3.1:compile<br />&#160;&#160;&#160;|&#160;&#160;\-&#160;org.codehaus.plexus:plexus-utils:jar:3.0.20:compile<br />&#160;&#160;&#160;\-&#160;org.apache.maven:maven-artifact:jar:3.3.1:compile<br />&#160;&#160;&#160;&#160;&#160;&#160;\-&#160;(org.codehaus.plexus:plexus-utils:jar:3.0.20:compile - omitted for duplicate)<br /><br /></ol></td></tr></table></td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
