--- a/dependency-info.html
+++ b/dependency-info.html
@@ -28,7 +28,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2015-04-13</span>
-                  &nbsp;| <span id="projectVersion">Version: 1.0-SNAPSHOT</span>
+                  &nbsp;| <span id="projectVersion">Version: 1.0</span>
                       </div>
             <div class="xright">                    <a href="./" title="SASS Maven Plugin">SASS Maven Plugin</a>
               
@@ -106,37 +106,37 @@
 <pre>&lt;dependency&gt;
   &lt;groupId&gt;com.learningobjects&lt;/groupId&gt;
   &lt;artifactId&gt;sass-maven-plugin&lt;/artifactId&gt;
-  &lt;version&gt;1.0-SNAPSHOT&lt;/version&gt;
+  &lt;version&gt;1.0&lt;/version&gt;
   &lt;type&gt;maven-plugin&lt;/type&gt;
 &lt;/dependency&gt;</pre></div></div>
 <div class="section">
 <h3>Apache Buildr<a name="Apache_Buildr"></a></h3><a name="Apache_Buildr"></a>
 <div class="source">
-<pre>'com.learningobjects:sass-maven-plugin:maven-plugin:1.0-SNAPSHOT'</pre></div></div>
+<pre>'com.learningobjects:sass-maven-plugin:maven-plugin:1.0'</pre></div></div>
 <div class="section">
 <h3>Apache Ivy<a name="Apache_Ivy"></a></h3><a name="Apache_Ivy"></a>
 <div class="source">
-<pre>&lt;dependency org=&quot;com.learningobjects&quot; name=&quot;sass-maven-plugin&quot; rev=&quot;1.0-SNAPSHOT&quot;&gt;
+<pre>&lt;dependency org=&quot;com.learningobjects&quot; name=&quot;sass-maven-plugin&quot; rev=&quot;1.0&quot;&gt;
   &lt;artifact name=&quot;sass-maven-plugin&quot; type=&quot;maven-plugin&quot; /&gt;
 &lt;/dependency&gt;</pre></div></div>
 <div class="section">
 <h3>Groovy Grape<a name="Groovy_Grape"></a></h3><a name="Groovy_Grape"></a>
 <div class="source">
 <pre>@Grapes(
-@Grab(group='com.learningobjects', module='sass-maven-plugin', version='1.0-SNAPSHOT')
+@Grab(group='com.learningobjects', module='sass-maven-plugin', version='1.0')
 )</pre></div></div>
 <div class="section">
 <h3>Grails<a name="Grails"></a></h3><a name="Grails"></a>
 <div class="source">
-<pre>compile 'com.learningobjects:sass-maven-plugin:1.0-SNAPSHOT'</pre></div></div>
+<pre>compile 'com.learningobjects:sass-maven-plugin:1.0'</pre></div></div>
 <div class="section">
 <h3>Leiningen<a name="Leiningen"></a></h3><a name="Leiningen"></a>
 <div class="source">
-<pre>[com.learningobjects/sass-maven-plugin &quot;1.0-SNAPSHOT&quot;]</pre></div></div>
+<pre>[com.learningobjects/sass-maven-plugin &quot;1.0&quot;]</pre></div></div>
 <div class="section">
 <h3>SBT<a name="SBT"></a></h3><a name="SBT"></a>
 <div class="source">
-<pre>libraryDependencies += &quot;com.learningobjects&quot; % &quot;sass-maven-plugin&quot; % &quot;1.0-SNAPSHOT&quot;</pre></div></div></div>
+<pre>libraryDependencies += &quot;com.learningobjects&quot; % &quot;sass-maven-plugin&quot; % &quot;1.0&quot;</pre></div></div></div>
       </div>
     </div>
     <div class="clear">
