--- a/project-reports.html
+++ b/project-reports.html
@@ -28,7 +28,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2015-04-13</span>
-                  &nbsp;| <span id="projectVersion">Version: 1.0-SNAPSHOT</span>
+                  &nbsp;| <span id="projectVersion">Version: 1.0</span>
                       </div>
             <div class="xright">                    <a href="./" title="SASS Maven Plugin">SASS Maven Plugin</a>
               
