--- a/project-summary.html
+++ b/project-summary.html
@@ -28,7 +28,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2015-04-13</span>
-                  &nbsp;| <span id="projectVersion">Version: 1.0-SNAPSHOT</span>
+                  &nbsp;| <span id="projectVersion">Version: 1.0</span>
                       </div>
             <div class="xright">                    <a href="./" title="SASS Maven Plugin">SASS Maven Plugin</a>
               
@@ -141,7 +141,7 @@
 <td>sass-maven-plugin</td></tr>
 <tr class="b">
 <td>Version</td>
-<td>1.0-SNAPSHOT</td></tr>
+<td>1.0</td></tr>
 <tr class="a">
 <td>Type</td>
 <td>maven-plugin</td></tr>
